--- a/tff/about/releases.html
+++ b/tff/about/releases.html
@@ -38,12 +38,13 @@ and in its top-level directory run the command:</strong></p>
 </code></pre>
 <h2 id="1">1</h2>
 <h2 id="10">1.0</h2>
-<h3 id="100">1.0.0</h3>
-<p>First release.</p>
+<h3 id="106">1.0.6</h3>
+<p>2025-08-20</p>
+<p>All kinds of small fixes.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/529894f6a13419a3ee38e7d01700611f7a82ffe8/tff/about/releases.py#L1-L3" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/87a5452921d16a1d54c01fbf7831c3c5cafce013/tff/about/releases.py#L1-L3" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">&#34;&#34;&#34;
 .. include:: ../docs/about/releases.md
@@ -116,7 +117,7 @@ setTimeout(() => input.focus(), 100);
 <ul>
 <li><a href="#1">1</a></li>
 <li><a href="#10">1.0</a><ul>
-<li><a href="#100">1.0.0</a></li>
+<li><a href="#106">1.0.6</a></li>
 </ul>
 </li>
 </ul>
