--- a/tff/convert/app/app.html
+++ b/tff/convert/app/app.html
@@ -31,7 +31,7 @@ crossorigin>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/87a5452921d16a1d54c01fbf7831c3c5cafce013/tff/convert/app/app.py#L1-L41" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/2598fbdac41e5ec5ad51eb7eb75140b27fa0988e/tff/convert/app/app.py#L1-L41" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">import types
 from tf.advanced.app import App
@@ -91,7 +91,7 @@ class TfApp(App):
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/87a5452921d16a1d54c01fbf7831c3c5cafce013/tff/convert/app/app.py#L9-L10" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/2598fbdac41e5ec5ad51eb7eb75140b27fa0988e/tff/convert/app/app.py#L9-L10" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def fmt_layout(app, n, **kwargs):
     return app._wrapHtml(n)</code></pre>
@@ -139,14 +139,14 @@ class TfApp(App):
 <dd>&nbsp;</dd>
 <dt><strong><code>configOverrides</code></strong> :&ensp;<code>list</code> of <code>tuple</code></dt>
 <dd>&nbsp;</dd>
-<dt><strong><code>_withGc</code></strong> :&ensp;<code>boolean</code>, optional <code>True</code></dt>
+<dt><strong><code>_withGc</code></strong> :&ensp;<code>boolean</code>, optional <code>False</code></dt>
 <dd>If False, it disables the Python garbage collector before
 loading features. Used to experiment with performance.</dd>
 </dl></div>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/87a5452921d16a1d54c01fbf7831c3c5cafce013/tff/convert/app/app.py#L13-L41" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/2598fbdac41e5ec5ad51eb7eb75140b27fa0988e/tff/convert/app/app.py#L13-L41" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">class TfApp(App):
     def __init__(app, *args, **kwargs):
