--- a/tff/index.html
+++ b/tff/index.html
@@ -40,8 +40,8 @@ For these operations you need to have Java installed.</p>
 to publish its textual corpora in the way of texts plus web annotations.</p>
 <h2 id="straight-to">Straight to &hellip;</h2>
 <ul>
-<li>Release notes (<code>tf.about.releases</code>)</li>
-<li>Install (<code>tf.about.install</code>)</li>
+<li>Release notes (<code><a title="tff.about.releases" href="about/releases.html">tff.about.releases</a></code>)</li>
+<li>Install (<code><a title="tff.about.install" href="about/install.html">tff.about.install</a></code>)</li>
 </ul>
 <h2 id="author">Author</h2>
 <p><strong>Author</strong>:
@@ -49,7 +49,7 @@ to publish its textual corpora in the way of texts plus web annotations.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/87a5452921d16a1d54c01fbf7831c3c5cafce013/tff/__init__.py#L1-L3" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/2598fbdac41e5ec5ad51eb7eb75140b27fa0988e/tff/__init__.py#L1-L3" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">&#34;&#34;&#34;
 .. include:: docs/main/top.md
