--- a/tff/convert/app/app.html
+++ b/tff/convert/app/app.html
@@ -31,7 +31,7 @@ crossorigin>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/2598fbdac41e5ec5ad51eb7eb75140b27fa0988e/tff/convert/app/app.py#L1-L41" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/a566b81552e55871f7f91c401da7bf599863174e/tff/convert/app/app.py#L1-L41" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">import types
 from tf.advanced.app import App
@@ -91,7 +91,7 @@ class TfApp(App):
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/2598fbdac41e5ec5ad51eb7eb75140b27fa0988e/tff/convert/app/app.py#L9-L10" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/a566b81552e55871f7f91c401da7bf599863174e/tff/convert/app/app.py#L9-L10" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def fmt_layout(app, n, **kwargs):
     return app._wrapHtml(n)</code></pre>
@@ -121,6 +121,8 @@ class TfApp(App):
 <dd>&nbsp;</dd>
 <dt><strong><code>mod</code></strong> :&ensp;<code>string</code> or <code>iterable</code>, optional <code>[]</code></dt>
 <dd>&nbsp;</dd>
+<dt><strong><code>bare</code></strong> :&ensp;<code>whether to suppress standard modules</code></dt>
+<dd>&nbsp;</dd>
 <dt><strong><code>version</code></strong> :&ensp;<code>string</code>, optional <code>None</code></dt>
 <dd>&nbsp;</dd>
 <dt><strong><code>versionOverride</code></strong> :&ensp;<code>boolean</code>, optional <code>False</code></dt>
@@ -146,7 +148,7 @@ loading features. Used to experiment with performance.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/2598fbdac41e5ec5ad51eb7eb75140b27fa0988e/tff/convert/app/app.py#L13-L41" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/a566b81552e55871f7f91c401da7bf599863174e/tff/convert/app/app.py#L13-L41" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">class TfApp(App):
     def __init__(app, *args, **kwargs):
