--- a/tff/convert/iiif.html
+++ b/tff/convert/iiif.html
@@ -31,7 +31,7 @@ crossorigin>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/2598fbdac41e5ec5ad51eb7eb75140b27fa0988e/tff/convert/iiif.py#L1-L624" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/a566b81552e55871f7f91c401da7bf599863174e/tff/convert/iiif.py#L1-L625" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">import collections
 
@@ -567,17 +567,18 @@ class IIIF:
 
         initTree(manifestDir, fresh=True)
 
-        miradorHtmlIn = self.miradorHtmlIn
-        miradorHtmlOut = self.miradorHtmlOut
+        if len(mirador):
+            miradorHtmlIn = self.miradorHtmlIn
+            miradorHtmlOut = self.miradorHtmlOut
 
-        with fileOpen(miradorHtmlIn) as fh:
-            miradorHtml = fh.read()
+            with fileOpen(miradorHtmlIn) as fh:
+                miradorHtml = fh.read()
 
-        miradorHtml = miradorHtml.replace(&#34;«manifests»&#34;, mirador.manifests)
-        miradorHtml = miradorHtml.replace(&#34;«example»&#34;, mirador.example)
+            miradorHtml = miradorHtml.replace(&#34;«manifests»&#34;, mirador.manifests)
+            miradorHtml = miradorHtml.replace(&#34;«example»&#34;, mirador.example)
 
-        with fileOpen(miradorHtmlOut, &#34;w&#34;) as fh:
-            fh.write(miradorHtml)
+            with fileOpen(miradorHtmlOut, &#34;w&#34;) as fh:
+                fh.write(miradorHtml)
 
         missingFiles = {}
         self.missingFiles = missingFiles
@@ -674,7 +675,7 @@ class IIIF:
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/2598fbdac41e5ec5ad51eb7eb75140b27fa0988e/tff/convert/iiif.py#L28-L49" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/a566b81552e55871f7f91c401da7bf599863174e/tff/convert/iiif.py#L28-L49" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def fillinIIIF(data, **kwargs):
     tpd = type(data)
@@ -734,7 +735,7 @@ of the form <code>[</code><em>arg</em><code>]</code>.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/2598fbdac41e5ec5ad51eb7eb75140b27fa0988e/tff/convert/iiif.py#L52-L147" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/a566b81552e55871f7f91c401da7bf599863174e/tff/convert/iiif.py#L52-L147" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def parseIIIF(settings, prod, selector, **kwargs):
     &#34;&#34;&#34;Parse the iiif yml file and deliver a filled in section.
@@ -878,7 +879,7 @@ of the form <code>[</code><em>arg</em><code>]</code>.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/2598fbdac41e5ec5ad51eb7eb75140b27fa0988e/tff/convert/iiif.py#L150-L624" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/a566b81552e55871f7f91c401da7bf599863174e/tff/convert/iiif.py#L150-L625" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">class IIIF:
     def __init__(
@@ -1265,17 +1266,18 @@ of the form <code>[</code><em>arg</em><code>]</code>.</dd>
 
         initTree(manifestDir, fresh=True)
 
-        miradorHtmlIn = self.miradorHtmlIn
-        miradorHtmlOut = self.miradorHtmlOut
+        if len(mirador):
+            miradorHtmlIn = self.miradorHtmlIn
+            miradorHtmlOut = self.miradorHtmlOut
 
-        with fileOpen(miradorHtmlIn) as fh:
-            miradorHtml = fh.read()
+            with fileOpen(miradorHtmlIn) as fh:
+                miradorHtml = fh.read()
 
-        miradorHtml = miradorHtml.replace(&#34;«manifests»&#34;, mirador.manifests)
-        miradorHtml = miradorHtml.replace(&#34;«example»&#34;, mirador.example)
+            miradorHtml = miradorHtml.replace(&#34;«manifests»&#34;, mirador.manifests)
+            miradorHtml = miradorHtml.replace(&#34;«example»&#34;, mirador.example)
 
-        with fileOpen(miradorHtmlOut, &#34;w&#34;) as fh:
-            fh.write(miradorHtml)
+            with fileOpen(miradorHtmlOut, &#34;w&#34;) as fh:
+                fh.write(miradorHtml)
 
         missingFiles = {}
         self.missingFiles = missingFiles
@@ -1368,7 +1370,7 @@ of the form <code>[</code><em>arg</em><code>]</code>.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/2598fbdac41e5ec5ad51eb7eb75140b27fa0988e/tff/convert/iiif.py#L316-L326" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/a566b81552e55871f7f91c401da7bf599863174e/tff/convert/iiif.py#L316-L326" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def console(self, msg, **kwargs):
     &#34;&#34;&#34;Print something to the output.
@@ -1391,7 +1393,7 @@ of the form <code>[</code><em>arg</em><code>]</code>.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/2598fbdac41e5ec5ad51eb7eb75140b27fa0988e/tff/convert/iiif.py#L385-L513" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/a566b81552e55871f7f91c401da7bf599863174e/tff/convert/iiif.py#L385-L513" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def genPages(self, kind, folder=None, file=None):
     if self.error:
@@ -1532,7 +1534,7 @@ of the form <code>[</code><em>arg</em><code>]</code>.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/2598fbdac41e5ec5ad51eb7eb75140b27fa0988e/tff/convert/iiif.py#L361-L383" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/a566b81552e55871f7f91c401da7bf599863174e/tff/convert/iiif.py#L361-L383" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def getPageSeq(self):
     if self.error:
@@ -1567,7 +1569,7 @@ of the form <code>[</code><em>arg</em><code>]</code>.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/2598fbdac41e5ec5ad51eb7eb75140b27fa0988e/tff/convert/iiif.py#L328-L349" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/a566b81552e55871f7f91c401da7bf599863174e/tff/convert/iiif.py#L328-L349" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def getRotations(self):
     if self.error:
@@ -1601,7 +1603,7 @@ of the form <code>[</code><em>arg</em><code>]</code>.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/2598fbdac41e5ec5ad51eb7eb75140b27fa0988e/tff/convert/iiif.py#L351-L359" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/a566b81552e55871f7f91c401da7bf599863174e/tff/convert/iiif.py#L351-L359" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def getSizes(self):
     if self.error:
@@ -1622,7 +1624,7 @@ of the form <code>[</code><em>arg</em><code>]</code>.</dd>
 <details class="source">
 <summary>
 <span>Expand source code</span>
-<a href="https://github.com/annotation/text-fabric-factory/blob/2598fbdac41e5ec5ad51eb7eb75140b27fa0988e/tff/convert/iiif.py#L515-L624" class="git-link">Browse git</a>
+<a href="https://github.com/annotation/text-fabric-factory/blob/a566b81552e55871f7f91c401da7bf599863174e/tff/convert/iiif.py#L515-L625" class="git-link">Browse git</a>
 </summary>
 <pre><code class="python">def manifests(self):
     if self.error:
@@ -1644,17 +1646,18 @@ of the form <code>[</code><em>arg</em><code>]</code>.</dd>
 
     initTree(manifestDir, fresh=True)
 
-    miradorHtmlIn = self.miradorHtmlIn
-    miradorHtmlOut = self.miradorHtmlOut
+    if len(mirador):
+        miradorHtmlIn = self.miradorHtmlIn
+        miradorHtmlOut = self.miradorHtmlOut
 
-    with fileOpen(miradorHtmlIn) as fh:
-        miradorHtml = fh.read()
+        with fileOpen(miradorHtmlIn) as fh:
+            miradorHtml = fh.read()
 
-    miradorHtml = miradorHtml.replace(&#34;«manifests»&#34;, mirador.manifests)
-    miradorHtml = miradorHtml.replace(&#34;«example»&#34;, mirador.example)
+        miradorHtml = miradorHtml.replace(&#34;«manifests»&#34;, mirador.manifests)
+        miradorHtml = miradorHtml.replace(&#34;«example»&#34;, mirador.example)
 
-    with fileOpen(miradorHtmlOut, &#34;w&#34;) as fh:
-        fh.write(miradorHtml)
+        with fileOpen(miradorHtmlOut, &#34;w&#34;) as fh:
+            fh.write(miradorHtml)
 
     missingFiles = {}
     self.missingFiles = missingFiles
